# gst-droidcamsrc

./: AUTHORS  Makefile.am  configure.ac
data/: Makefile.am  gstdroidcamsrc.conf
gst/: Makefile.am
gst/droidcamsrc/: Makefile.am  cameraparams.c  cameraparams.cc  cameraparams.h  enums.c  enums.h  exif.c  exif.h  gstcamerabufferpool.c  gstcamerabufferpool.h  gstcameramemory.c  gstcameramemory.h  gstcamerasettings.c  gstcamerasettings.h  gstdroidcamsrc.c  gstdroidcamsrc.h  gstimgsrcpad.c  gstimgsrcpad.h  gstphotoiface.c  gstphotoiface.h  gstvfsrcpad.c  gstvfsrcpad.h  gstvidsrcpad.c  gstvidsrcpad.h  plugin.c  table.h
rpm/: gst-droidcamsrc.spec
test/: Makefile.am  camerabin2.c  capture.c  dummy.gep  simple.c  test.c  test.h  video.c
